checked code with pre-commit

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,21 +7,30 @@ attrs==23.1.0
 cfgv==3.4.0
 charset-normalizer==3.2.0
 click==8.1.7
+contourpy==1.1.0
+cycler==0.11.0
 distlib==0.3.7
 fastapi==0.103.0
 filelock==3.12.3
+fonttools==4.42.1
 frozenlist==1.4.0
 h11==0.14.0
 identify==2.5.27
 idna==3.4
+kiwisolver==1.4.5
+matplotlib==3.7.2
+mplfinance==0.12.10b0
 multidict==6.0.4
 nodeenv==1.8.0
 numpy==1.25.2
+packaging==23.1
 pandas==2.1.0
+Pillow==10.0.0
 platformdirs==3.10.0
 pre-commit==3.3.3
 pydantic==2.3.0
 pydantic_core==2.6.3
+pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
 PyYAML==6.0.1
