--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,4 +53,14 @@ repos:
     rev: "6.0.0"
     hooks:
       - id: flake8
+        additional_dependencies: [
+          'flake8-blind-except',
+#          'flake8-docstrings',
+          'flake8-bugbear',
+          'flake8-comprehensions',
+#          'flake8-docstrings',
+          'flake8-implicit-str-concat',
+          'pydocstyle>=5.0.0',
+        ]
+        exclude: ^tests/test_cases/no_closing_bracket\.py$
 
